Update API endpoint to Railway backend

--- a/admin.html
+++ b/admin.html
@@ -267,7 +267,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3000/api';
+        const API_BASE = 'https://web-production-2f4a9.up.railway.app/api';
 
         async function loadData() {
             const loading = document.getElementById('loading');
