Hide cross and triple dot icons, add purple gradient background

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <!-- Step 0: Recipient Input -->
         <div class="screen active" id="recipientInputScreen">
             <div class="top-bar">
-                <div class="back-btn">✕</div>
-                <div class="menu-icon">⋮</div>
+                <div class="back-btn" style="visibility: hidden;">✕</div>
+                <div class="menu-icon" style="visibility: hidden;">⋮</div>
             </div>
             <div class="content">
                 <div class="input-section">
@@ -35,7 +35,7 @@
         <div class="screen" id="recipientScreen">
             <div class="top-bar">
                 <div class="back-btn" id="backToRecipient">←</div>
-                <div class="menu-icon">⋮</div>
+                <div class="menu-icon" style="visibility: hidden;">⋮</div>
             </div>
             <div class="content">
                 <div class="recipient-section">
@@ -73,7 +73,7 @@
         <div class="screen" id="methodScreen">
             <div class="top-bar">
                 <div class="back-btn" id="backToAmount">←</div>
-                <div class="menu-icon">⋮</div>
+                <div class="menu-icon" style="visibility: hidden;">⋮</div>
             </div>
             <div class="content">
                 <div class="recipient-section">
